grote update vectoren (#29)
* image uit commentaar

* update vectoren + inhoudsopgave

* TEX4HT math display mode bug fix

* lijn commentaar

* recompile

* recompile all

* add xmlatex veryclean

* mini update

* Restore images

* update vectoren

---------

Co-authored-by: Wim Obbels <wim@obbels.be>
Co-authored-by: Wim Obbels <wiobber@users.noreply.github.com>

--- a/6dejaar/vectoren/vct_begrip.tex
+++ b/6dejaar/vectoren/vct_begrip.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
 \addPrintStyle{..}
 
@@ -9,31 +9,26 @@
     \xmsource\xmuitleg
 
 
-In de fysica wordt de natuur beschreven met grootheden die men opsplitst in twee categorieën: scalaire grootheden (scalars) en vectoriële grootheden (vectoren). 
+De natuurkunde beschrijft de natuur met grootheden die worden opsplitst in twee categorieën: scalaire grootheden (scalars) en vectoriële grootheden (vectoren). 
 Grootheden die de vraag kunnen oproepen: “Naar waar gericht?” zijn vectoren, grootheden waarbij die vraag geen antwoord heeft, zijn scalars. 
 Dit onderscheid en een correcte omgang met beiden zijn ontzettend belangrijk in fysica.
 
 
-Voorbeeld: een helikopter vliegt met een snelheid van 40 km/h. 
+Stel dat \textit{een helikopter vliegt met een snelheid van 40 km/h.} 
 Vraag: “Naar waar?” Antwoord: “Naar het zuiden, naar Brussel, naar omhoog, schuin naar onderen, …” 
 Er zijn vele betekenisvolle antwoorden mogelijk. 
-Snelheid is dus een vector. 
-Stel het zwembadwater heeft een temperatuur van 27°C. 
-Vraag: “Naar waar?” Antwoord: “Hier is geen zinnig antwoord op.” 
-Temperatuur is dus een scalar.
+Snelheid is een vector. 
+Als \textit{het zwembadwater een temperatuur van  \(\SI{27}{\celsius}\) heeft}, is er geen zinnig antwoord op de vraag \textit{naar waar?}. 
+Temperatuur is een scalar.
 
-Een vectoriële grootheid heeft drie variabele kenmerken: grootte, richting en zin. %aangrijpingspunt?
-Voorbeeld: de helikopter vliegt aan 40 km/h, horizontaal en naar het zuiden. % horizontaal?
-Een scalaire grootheid heeft slechts één kenmerk: de grootte (waarin soms ook een teken vervat zit). 
-Voorbeeld: een sneeuwbal heeft een temperatuur van -10°C.
-De plaats waar de vector aangrijpt, noemt men het aangrijpingspunt van de vector. %naar volgende activity? 
+Een vectoriële grootheid heeft vier kenmerken: grootte, richting, zin en een aangrijpingspunt. 
+Zo kan de helikopter aan 40 km/h \textit{richting het zuiden} vliegen. % horizontaal?
+Een scalaire grootheid heeft enkel een grootte met teken, zo kan je diepvries een temperatuur hebben van \(\SI{-10}{\celsius}\).
 
 
 \begin{remark}
 Het onderscheidt tussen scalar en vector is in de eerste plaats een verschil in \textit{naamgeving}.
-Een scalar kan immers bekeken worden als een vector met slechts één component.
-
-Zo kan men zeggen dat de temperatuur in graden gelijk is aan de scalar '\(27\)' of gegeven wordt door de vector \(\vec{t} = (27) \) met slechts één component. 
+Je kan zeggen dat de temperatuur in graden gelijk is aan de scalar \(27\) of gegeven wordt door de vector \(\vec{temp} = (27) \) met slechts één component. 
 \end{remark}
 
 
