--- a/6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex
+++ b/6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex
@@ -16,7 +16,7 @@
 \end{denkvraag*}
 
 \begin{definition}{onafhankelijkheidsbeginsel}
-	Het onafhankelijkheidsbeginsel stelt dat een beweging in een bepaalde richting geen invloed uitoefent op de beweging van een andere richting. 
+	Het onafhankelijkheidsbeginsel stelt dat een beweging in een bepaalde richting geen invloed uitoefent op de beweging in een andere richting. 
 \end{definition}
 
 Als gevolg kunnen we de beweging beschrijven als een samenstelling van een horizontale en een verticale beweging, onafhankelijk van elkaar.
