todo met % ervoor

--- a/6dejaar/kinematica/knmtc_2dim_intro.tex
+++ b/6dejaar/kinematica/knmtc_2dim_intro.tex
@@ -17,4 +17,4 @@
 	
 \end{document}
 
-\todo{Hoe zit het met poolcoördinaten? Die zijn niet te gebruiken als referentiestelsel \ldtos?}
+% \todo{Hoe zit het met poolcoördinaten? Die zijn niet te gebruiken als referentiestelsel \ldtos?}
